--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "netlify-cli": "^2.58.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "npx cross-env NODE_ENV=dev npx npm-run-all --parallel start:app start:server",
+    "start:app": "react-scripts start",
+    "start:server": "npx netlify-lambda serve functions",
+    "build": "npx npm-run-all --parallel build:**",
+    "build:app": "react-scripts build",
+    "build:functions": "npx netlify-lambda build functions",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -31,5 +34,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2",
+    "netlify-cli": "^2.58.0",
+    "netlify-lambda": "^2.0.1",
+    "npm-run-all": "^4.1.5"
   }
 }
