--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "scripts": {
     "start": "npx cross-env NODE_ENV=dev npx npm-run-all --parallel start:app start:server",
     "start:app": "react-scripts start",
-    "start:server": "npx netlify-lambda serve functions",
+    "start:server": "npx netlify-lambda serve functions/serverless-ssr",
     "build": "npx npm-run-all --parallel build:**",
     "build:app": "react-scripts build",
-    "build:functions": "npx netlify-lambda build functions",
+    "build:functions": "npx netlify-lambda build functions/serverless-ssr",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -36,6 +36,11 @@
     ]
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "http-proxy-middleware": "^1.0.5",
     "cross-env": "^7.0.2",
     "netlify-cli": "^2.58.0",
     "netlify-lambda": "^2.0.1",
